<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/signup_name"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="283dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="144dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signup_confirm_password"
        android:layout_width="283dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="199dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/signup_mpin"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="219dp"
        android:ems="10"
        android:maxLength="4"
        android:hint="Enter 4 digit pin"
        android:inputType="numberPassword" />

    <RadioGroup
        android:id="@+id/signup_genderGrp"
        android:layout_width="283dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="163dp"
        android:checkedButton="@id/male"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:text="@string/gender_male" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:text="@string/gender_female" />
    </RadioGroup>

    <EditText
        android:id="@+id/signup_dob"
        android:layout_width="282dp"
        android:layout_height="39dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="112dp"
        android:ems="10"
        android:hint="Date of Birth (MM-DD-YYYY)" />

    <EditText
        android:id="@+id/signup_contact_no"
        android:layout_width="283dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="58dp"
        android:ems="10"
        android:hint="Contact Number"
        android:inputType="phone" />

    <Button
        android:id="@+id/signup_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/signup"/>

</RelativeLayout>